# natconvection

./: ReadMe（ソースコードフォルダ内に同じ内容のmdファイルがあります）.html
1_設計/: 熔融塩技研_熔融塩ループ計算基本設計_20191213.pptx
2_ソースコード/: .gitignore  Pipfile  README.md  loop_param.json  setup.cfg  setup.py
2_ソースコード/table_top_loop/: __init__.py  __main__.py  app_exception.py  cli.py  degree.py  error_manager.py  log_operator.py  loop_operator.py  system_manager.py
2_ソースコード/table_top_loop/models/: core.py  device_base.py  heat_exchanger.py  parameters.py  pipe.py  pump.py  system_env.py
2_ソースコード/tests/: test_degree.py  test_system_config.py
3_テスト/: 熔融塩技研_熔融塩ループ計算_テストケース.xlsx
