[metadata]
name = table_top_loop
version = file:table_top_loop/VERSION

[options]
packages = table_top_loop
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox

[options.entry_points]
console_scripts =
    table_top_loop = table_top_loop.cli:main

[flake8]
exclude = .git, .tox, .venv, .eggs, build, dist, docs
max-line-length = 120

[isort]
skip = .git, .tox, .venv, .eggs, build, dist, docs
line_length = 120